# candle2

./: .gitignore  CMakeLists.txt  Genmitsu4030XL.cpp  Genmitsu4030XL.h  GrblController.cpp  GrblController.h  Readme.md  candle2.pro.obsolete  frmabout.cpp  frmabout.h  frmabout.ui  frmmain.cpp  frmmain.h  frmmain.ui  frmmain.ui.autosave  frmmain_event.cpp  frmmain_heightmap.cpp  frmmain_jogcontrol.cpp  frmmain_processresponse.cpp  frmmain_settings.cpp  frmmain_util.cpp  frmsettings.cpp  frmsettings.h  grblController.cpp  grblController.h  main.cpp
GrIP/: CRC.c
doc/: Hardware Entities.excalidraw  Schematic.excalidraw  UI Entities.excalidraw  Untitled-2023-09-29-0908.excalidraw  User presses Connect button.excalidraw  document.commentary.html  flyer_v2.pdf.crdownload  frmmain.cpp.on_btnConnect_clicked.permalink.github.com.pflagerd.candle2.blob.f54d5a56fea32e329a42ed22e124a164ab92e688.frmmain.cpp.L1837-L1937.html  index.html  lexicon.json  package-lock.json
drawers/: gcodedrawer.cpp
interface/: SerialInterface.cpp  SerialInterface.h
ontology/: lexicon.json  package-lock.json  readme.md
parser/: linesegment.cpp  linesegment.h
utils/: profiles.cpp
widgets/: glwidget.cpp  glwidget.h
